--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.581.0-dev.0",
+  "version": "1.581.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,11 +42,11 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.197.0-dev.0",
-    "@salutejs/plasma-hope": "1.342.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.325.0-dev.0",
+    "@salutejs/plasma-core": "1.197.0",
+    "@salutejs/plasma-hope": "1.342.0",
+    "@salutejs/plasma-new-hope": "0.325.0",
     "@salutejs/plasma-themes": "0.33.0",
-    "@salutejs/plasma-tokens-b2c": "0.60.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.60.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
@@ -71,9 +71,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.128.0-dev.0",
-    "@salutejs/plasma-icons": "1.218.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.198.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.128.0",
+    "@salutejs/plasma-icons": "1.218.0",
+    "@salutejs/plasma-sb-utils": "0.198.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-knobs": "7.0.2",
