--- a/packages/sdds-clfd-auto/package.json
+++ b/packages/sdds-clfd-auto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-clfd-auto",
-  "version": "0.312.0-dev.0",
+  "version": "0.312.0",
   "description": "Salute Design System / React UI kit for SDDS CLFD AUTO web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "directory": "packages/sdds-clfd-auto"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.325.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.325.0",
     "@salutejs/plasma-themes": "0.33.0"
   },
   "peerDependencies": {
@@ -55,10 +55,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.197.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.128.0-dev.0",
-    "@salutejs/plasma-icons": "1.218.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.198.0-dev.0",
+    "@salutejs/plasma-core": "1.197.0",
+    "@salutejs/plasma-cy-utils": "0.128.0",
+    "@salutejs/plasma-icons": "1.218.0",
+    "@salutejs/plasma-sb-utils": "0.198.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
