--- a/website/sdds-crm-docs/package.json
+++ b/website/sdds-crm-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-crm-docs",
-  "version": "0.3.0-dev.0",
+  "version": "0.3.0",
   "description": "SDDS-CRM documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,20 +30,20 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.494.0-dev.0",
-    "@salutejs/plasma-icons": "1.218.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.494.0",
+    "@salutejs/plasma-icons": "1.218.0",
     "@salutejs/plasma-typo": "0.42.0",
+    "@salutejs/sdds-crm": "0.312.0",
+    "@salutejs/sdds-themes": "0.37.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.1",
-    "url-loader": "^4.1.1",
     "react-hook-form": "7.53.0",
-    "@salutejs/sdds-crm": "0.312.0-dev.0",
-    "@salutejs/sdds-themes": "0.37.0-dev.0"
+    "styled-components": "5.3.1",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.1",
