--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ES5",
         "lib": ["esnext", "dom"],
         "types": [
             "cypress",
@@ -11,7 +11,9 @@
             "cypress-real-events",
             "cypress-file-upload"
         ],
-        "typeRoots": ["./@types"],
+        "allowJs": true,
+        "moduleResolution": "node",
+        "esModuleInterop": true,
         "resolveJsonModule": true
     },
     "include": ["**/*.ts", "plugins/index.ts"]
