--- a/package.json
+++ b/package.json
@@ -13,25 +13,22 @@
     "postscaffold:docs": "npm run scaffold:components && npm run scaffold:bootstrap",
     "git:diff": "git diff -- ':!packages/themes/sdds-themes' ':!packages/themes/plasma-themes'",
     "release": "npm run git:diff && auto shipit -v",
-    "cy:clean": "rm -rf cypress/{results,reports,screenshots,videos}",
-    "cy:accept-diffs": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_updateSnapshots=true -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:8.0.0 run --browser chrome",
-    "cy:run": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:8.0.0 run --browser chrome",
-    "cy:open": "cypress open",
-    "cy:get-image": "echo trike94/cypress$(if [[ $(uname -a) == *\"ARM64\"* ]]; then echo \"-m1\"; fi):9.4.1",
     "precy:run-ct": "rm -rf {.nyc_output}",
-    "cy:run-ct": "SPEC=$(node -p \"require('./cypress/cypress-get-specs.js').specs\") && CYPRESS_IMAGE=$(npm run cy:get-image | tail -1) && docker run --rm -v $PWD:/e2e -w /e2e --entrypoint=/bin/bash -e CYPRESS_CONFIG_FILE=$CYPRESS_CONFIG_FILE -e PACKAGE_NAME=$PACKAGE_NAME -e COVERAGE_DIR=cypress/${PACKAGE_NAME}-coverage -e COVERAGE=true -e PACKAGE_DIR=packages/$PACKAGE_NAME -e CYPRESS_updateSnapshots=$CYPRESS_updateSnapshots ${CYPRESS_IMAGE} -c 'node ./actions/platform-test/lib/index.js --config cypress/config/$CYPRESS_CONFIG_FILE --spec='$SPEC' --command run-ct'",
-    "cy:ui:run-ct": "PACKAGE_NAME=plasma-ui CYPRESS_CONFIG_FILE=ui-config.json npm run cy:run-ct",
-    "cy:web:run-ct": "PACKAGE_NAME=plasma-web CYPRESS_CONFIG_FILE=web-config.json npm run cy:run-ct",
-    "cy:b2b:run-ct": "PACKAGE_NAME=plasma-web CYPRESS_CONFIG_FILE=b2b-config.json npm run cy:run-ct",
-    "cy:b2c:run-ct": "PACKAGE_NAME=plasma-b2c CYPRESS_CONFIG_FILE=b2c-config.json npm run cy:run-ct",
-    "cy:ui:run-ct-update-diffs": "PACKAGE_NAME=plasma-ui CYPRESS_updateSnapshots=true CYPRESS_CONFIG_FILE=ui-config.json npm run cy:run-ct",
-    "cy:web:run-ct-update-diffs": "PACKAGE_NAME=plasma-web CYPRESS_updateSnapshots=true CYPRESS_CONFIG_FILE=web-config.json npm run cy:run-ct",
-    "cy:b2b:run-ct-update-diffs": "PACKAGE_NAME=plasma-web CYPRESS_updateSnapshots=true CYPRESS_CONFIG_FILE=b2b-config.json npm run cy:run-ct",
-    "cy:b2c:run-ct-update-diffs": "PACKAGE_NAME=plasma-b2c CYPRESS_updateSnapshots=true CYPRESS_CONFIG_FILE=b2c-config.json npm run cy:run-ct",
+    "cy:clean": "rm -rf cypress/{results,reports,screenshots,videos}",
+    "cy:accept-diffs": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_updateSnapshots=true -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:10.11.0 run --browser chrome",
+    "cy:run": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:10.11.0 run --browser chrome",
+    "cy:open": "cypress open",
+    "cy:get-image": "echo younggod/cypress$(if [[ $(uname -a) == *\"ARM64\"* ]]; then echo \"-m\"; fi):10.11.0",
+    "cy:run-ct": "CYPRESS_IMAGE=$(npm run cy:get-image | tail -1) && docker run --rm -v $PWD:/e2e -w /e2e --entrypoint=/bin/bash -e CYPRESS_CONFIG_FILE='cypress.config.ts' -e PACKAGE_NAME=$PACKAGE_NAME -e COMPONENTS=$COMPONENTS -e RETRIES=$RETRIES -e COVERAGE_DIR=cypress/${PACKAGE_NAME}-coverage -e COVERAGE=true -e CYPRESS_updateSnapshots=$CYPRESS_updateSnapshots ${CYPRESS_IMAGE} -c 'node ./actions/platform-test/lib/index.js --config $CYPRESS_CONFIG_FILE --command run-ct'",
+    "cy:b2c:run-ct": "PACKAGE_NAME=plasma-b2c COMPONENTS=$npm_config_components npm run cy:run-ct",
+    "cy:web:run-ct": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components npm run cy:run-ct",
+    "cy:ui:run-ct": "PACKAGE_NAME=plasma-ui COMPONENTS=$npm_config_components RETRIES=3 npm run cy:run-ct",
+    "cy:b2c:run-ct-update-diffs": "PACKAGE_NAME=plasma-b2c COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
+    "cy:web:run-ct-update-diffs": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
+    "cy:ui:run-ct-update-diffs": "PACKAGE_NAME=plasma-ui COMPONENTS=$npm_config_components RETRIES=3 CYPRESS_updateSnapshots=true npm run cy:run-ct",
     "cy:ui:open-ct": "PACKAGE_DIR=packages/plasma-ui node actions/platform-test/lib/index.js --config cypress/config/ui-config.json --command open-ct --env failOnSnapshotDiff=false",
-    "cy:web:open-ct": "PACKAGE_DIR=packages/plasma-web node actions/platform-test/lib/index.js --config cypress/config/web-config.json --command open-ct --env failOnSnapshotDiff=false",
-    "cy:b2b:open-ct": "PACKAGE_DIR=packages/plasma-web node actions/platform-test/lib/index.js --config cypress/config/b2b-config.json --command open-ct --env failOnSnapshotDiff=false",
-    "cy:b2c:open-ct": "PACKAGE_DIR=packages/plasma-b2c node actions/platform-test/lib/index.js --config cypress/config/b2c-config.json --command open-ct --env failOnSnapshotDiff=false",
+    "cy:web:open-ct": "PACKAGE_NAME=plasma-web node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
+    "cy:b2c:open-ct": "PACKAGE_NAME=plasma-b2c node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
     "cy:report:coverage": "nyc report --reporter=cobertura --reporter=html",
     "extract-docgen-info": "lerna run extract-docgen-info",
     "lint:scripts": "eslint ./scripts ./auto-plugins/src --ext .js,.ts --quiet",
@@ -63,9 +60,9 @@
     "@babel/plugin-transform-react-constant-elements": "7.22.5",
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
-    "@cypress/code-coverage": "3.9.11",
-    "@cypress/react": "5.9.2",
-    "@cypress/webpack-dev-server": "1.4.0",
+    "@cypress/code-coverage": "3.10.9",
+    "@cypress/react": "5.12.0",
+    "@cypress/webpack-dev-server": "2.4.1",
     "@cypress/webpack-preprocessor": "5.9.1",
     "@salutejs/eslint-config": "1.2.0",
     "@salutejs/eslint-config-base": "0.4.0",
@@ -90,7 +87,7 @@
     "chalk": "4.1.2",
     "commander": "10.0.0",
     "css-loader": "7.1.2",
-    "cypress": "8.0.0",
+    "cypress": "10.11.0",
     "cypress-axe": "0.13.0",
     "cypress-file-upload": "5.0.8",
     "cypress-image-snapshot": "4.0.1",
