--- a/package.json
+++ b/package.json
@@ -18,14 +18,32 @@
     "cy:accept-diffs": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_updateSnapshots=true -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:13.17.0 run --browser chrome",
     "cy:run": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:13.17.0 run --browser chrome",
     "cy:open": "cypress open",
+
     "cy:get-image": "echo younggod/cypress-13$(if [[ $(uname -a) == *\"ARM64\"* ]]; then echo \"-m\"; fi):13.17.0",
-    "cy:run-ct": "CYPRESS_IMAGE=$(npm run cy:get-image | tail -1) && docker run --rm -v $PWD:/e2e -w /e2e --entrypoint=/bin/bash -e CYPRESS_CONFIG_FILE='cypress.config.ts' -e PACKAGE_NAME=$PACKAGE_NAME -e COMPONENTS=$COMPONENTS -e RETRIES=$RETRIES -e COVERAGE_DIR=cypress/${PACKAGE_NAME}-coverage -e COVERAGE=true -e CYPRESS_updateSnapshots=$CYPRESS_updateSnapshots ${CYPRESS_IMAGE} -c 'node ./actions/platform-test/lib/index.js --config $CYPRESS_CONFIG_FILE --command run-ct'",
+    "cy:run-ct": "CYPRESS_IMAGE=$(npm run cy:get-image | tail -1) && docker run --rm -v $PWD:/e2e -w /e2e --entrypoint=/bin/bash -e CYPRESS_CONFIG_FILE='cypress.config.ts' -e PACKAGE_NAME=$PACKAGE_NAME -e SPEC_GROUP=$SPEC_GROUP -e COMPONENTS=$COMPONENTS -e RETRIES=$RETRIES -e COVERAGE_DIR=cypress/${PACKAGE_NAME}-coverage -e COVERAGE=true -e CYPRESS_updateSnapshots=$CYPRESS_updateSnapshots ${CYPRESS_IMAGE} -c 'node ./actions/platform-test/lib/index.js --config $CYPRESS_CONFIG_FILE --command run-ct'",
+    
     "cy:b2c:run-ct": "PACKAGE_NAME=plasma-b2c COMPONENTS=$npm_config_components npm run cy:run-ct",
+    "cy:b2c:run-ct:a-d": "PACKAGE_NAME=plasma-b2c SPEC_GROUP='[A-D]' npm run cy:run-ct",
+    "cy:b2c:run-ct:e-l": "PACKAGE_NAME=plasma-b2c SPEC_GROUP='[E-L]' npm run cy:run-ct",
+    "cy:b2c:run-ct:m-r": "PACKAGE_NAME=plasma-b2c SPEC_GROUP='[M-R]' npm run cy:run-ct",
+    "cy:b2c:run-ct:s-z": "PACKAGE_NAME=plasma-b2c SPEC_GROUP='[S-Z]' npm run cy:run-ct",
+    
     "cy:web:run-ct": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components npm run cy:run-ct",
+    "cy:web:run-ct:a-d": "PACKAGE_NAME=plasma-web SPEC_GROUP='[A-D]' npm run cy:run-ct",
+    "cy:web:run-ct:e-l": "PACKAGE_NAME=plasma-web SPEC_GROUP='[E-L]' npm run cy:run-ct",
+    "cy:web:run-ct:m-r": "PACKAGE_NAME=plasma-web SPEC_GROUP='[M-R]' npm run cy:run-ct",
+    "cy:web:run-ct:s-z": "PACKAGE_NAME=plasma-web SPEC_GROUP='[S-Z]' npm run cy:run-ct",
+    
     "cy:ui:run-ct": "PACKAGE_NAME=plasma-ui COMPONENTS=$npm_config_components RETRIES=3 npm run cy:run-ct",
+    "cy:ui:run-ct:a-d": "PACKAGE_NAME=plasma-ui SPEC_GROUP='[A-D]' npm run cy:run-ct",
+    "cy:ui:run-ct:e-l": "PACKAGE_NAME=plasma-ui SPEC_GROUP='[E-L]' npm run cy:run-ct",
+    "cy:ui:run-ct:m-r": "PACKAGE_NAME=plasma-ui SPEC_GROUP='[M-R]' npm run cy:run-ct",
+    "cy:ui:run-ct:s-z": "PACKAGE_NAME=plasma-ui SPEC_GROUP='[S-Z]' npm run cy:run-ct",
+    
     "cy:b2c:run-ct-update-diffs": "PACKAGE_NAME=plasma-b2c COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
     "cy:web:run-ct-update-diffs": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
     "cy:ui:run-ct-update-diffs": "PACKAGE_NAME=plasma-ui COMPONENTS=$npm_config_components RETRIES=3 CYPRESS_updateSnapshots=true npm run cy:run-ct",
+    
     "cy:ui:open-ct": "PACKAGE_DIR=packages/plasma-ui node actions/platform-test/lib/index.js --config cypress/config/ui-config.json --command open-ct --env failOnSnapshotDiff=false",
     "cy:web:open-ct": "PACKAGE_NAME=plasma-web node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
     "cy:b2c:open-ct": "PACKAGE_NAME=plasma-b2c node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
