--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.128.0",
+  "version": "0.129.0-dev.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -25,10 +25,10 @@
   },
   "devDependencies": {
     "@cypress/react": "5.12.0",
-    "@salutejs/plasma-tokens": "1.112.0",
-    "@salutejs/plasma-tokens-b2b": "1.49.0",
-    "@salutejs/plasma-tokens-b2c": "0.60.0",
-    "@salutejs/plasma-tokens-web": "1.64.0",
+    "@salutejs/plasma-tokens": "1.113.0-dev.0",
+    "@salutejs/plasma-tokens-b2b": "1.50.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.61.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.65.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@types/node": "22.15.29",
     "@types/react": "18.0.28",
