--- a/website/plasma-b2c-docs/package.json
+++ b/website/plasma-b2c-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c-docs",
-  "version": "0.208.0",
+  "version": "0.209.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,11 +30,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-b2c": "1.581.0",
-    "@salutejs/plasma-docs-ui": "0.494.0",
+    "@salutejs/plasma-b2c": "1.582.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.495.0-dev.0",
     "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-tokens-b2c": "0.60.0",
-    "@salutejs/plasma-tokens-web": "1.64.0",
+    "@salutejs/plasma-tokens-b2c": "0.61.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.65.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
