--- a/website/plasma-web-docs/package.json
+++ b/website/plasma-web-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web-docs",
-  "version": "0.541.0",
+  "version": "0.542.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,13 +30,13 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.494.0",
+    "@salutejs/plasma-docs-ui": "0.495.0-dev.0",
     "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-tokens-b2b": "1.49.0",
-    "@salutejs/plasma-tokens-b2c": "0.60.0",
-    "@salutejs/plasma-tokens-web": "1.64.0",
+    "@salutejs/plasma-tokens-b2b": "1.50.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.61.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.65.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/plasma-web": "1.583.0",
+    "@salutejs/plasma-web": "1.584.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
