--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs",
-  "version": "0.318.0-dev.0",
+  "version": "0.318.0",
   "description": "Salute Design System / React UI kit for SDDS CS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,8 +30,8 @@
     "directory": "packages/sdds-cs"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.326.0-dev.0",
-    "@salutejs/sdds-themes": "0.38.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.326.0",
+    "@salutejs/sdds-themes": "0.38.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -54,10 +54,10 @@
     "@microsoft/api-extractor": "7.38.3",
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.198.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.129.0-dev.0",
+    "@salutejs/plasma-core": "1.198.0",
+    "@salutejs/plasma-cy-utils": "0.129.0",
     "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-sb-utils": "0.199.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.199.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
