--- a/website/plasma-giga-docs/package.json
+++ b/website/plasma-giga-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga-docs",
-  "version": "0.103.0-dev.0",
+  "version": "0.103.0",
   "description": "PLASMA GIGA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,10 +30,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.495.0-dev.0",
-    "@salutejs/plasma-giga": "0.309.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.495.0",
+    "@salutejs/plasma-giga": "0.309.0",
     "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-themes": "0.34.0-dev.0",
+    "@salutejs/plasma-themes": "0.34.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
