--- a/website/sdds-finportal-docs/package.json
+++ b/website/sdds-finportal-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finportal-docs",
-  "version": "0.9.0-dev.0",
+  "version": "0.9.0",
   "description": "SDDS-FINPORTAL documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.498.0-dev.0",
-    "@salutejs/plasma-icons": "1.219.0",
+    "@salutejs/plasma-docs-ui": "0.498.0",
+    "@salutejs/plasma-icons": "1.220.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-finportal": "0.308.0-dev.0",
-    "@salutejs/sdds-themes": "0.41.0-dev.0",
+    "@salutejs/sdds-finportal": "0.308.0",
+    "@salutejs/sdds-themes": "0.41.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "1.1.1",
     "file-loader": "6.2.0",
